Made first changes
Converted state structure
Deleted unneeded resource files
Added title screen background

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	http://michalbe.blogspot.com
 	http://twitter.com/michalbe
 	-->
-    <title>The Most Addicting Pony Game Ever!</title>
+    <title>Take Over Ponyville</title>
 	<style>
 		body {
 			margin:0px;
